--- a/client/index.html
+++ b/client/index.html
@@ -122,11 +122,11 @@
                         class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary font-medium transition-colors">
                         Como Funciona
                     </a>
-                    <a href="./src/pages/login.html"
+                    <a href="/src/pages/login.html"
                         class="px-5 py-2 text-gray-700 dark:text-gray-300 font-medium hover:text-primary dark:hover:text-primary transition-colors">
                         Entrar
                     </a>
-                    <a href="./src/pages/register.html"
+                    <a href="/src/pages/register.html"
                         class="px-5 py-2 bg-primary hover:bg-primary-dark text-background-dark font-semibold rounded-xl transition-all active:scale-95">
                         Cadastrar
                     </a>
@@ -154,11 +154,11 @@
                         Como Funciona
                     </a>
                     <div class="pt-2 space-y-3">
-                        <a href="/login.html"
+                        <a href="/src/pages/login.html"
                             class="block text-center px-4 py-3 text-gray-700 dark:text-gray-300 font-medium hover:text-primary dark:hover:text-primary transition-colors">
                             Entrar
                         </a>
-                        <a href="/register.html"
+                        <a href="/src/pages/register.html"
                             class="block text-center px-4 py-3 bg-primary hover:bg-primary-dark text-background-dark font-semibold rounded-xl transition-all active:scale-95">
                             Cadastrar
                         </a>
@@ -327,7 +327,7 @@
             </div>
 
             <div class="text-center mt-12">
-                <a href="/register.html"
+                <a href="/src/pages/register.html"
                     class="inline-flex items-center gap-2 px-8 py-4 bg-transparent border-2 border-primary text-primary hover:bg-primary/10 font-semibold rounded-xl text-lg transition-all active:scale-95">
                     <span>Ver Todos os Prestadores</span>
                     <span class="material-symbols-outlined">arrow_forward</span>
@@ -344,11 +344,11 @@
                 Junte-se a milhares de pessoas que já transformaram sua experiência com cuidados de saúde
             </p>
             <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                <a href="/register.html"
+                <a href="/src/pages/register.html"
                     class="px-8 py-4 bg-primary hover:bg-primary-dark text-background-dark font-semibold rounded-xl text-lg transition-all active:scale-95 shadow-lg shadow-primary/25">
                     Criar Conta Grátis
                 </a>
-                <a href="/login.html"
+                <a href="/src/pages/login.html"
                     class="px-8 py-4 bg-white dark:bg-surface-dark hover:bg-gray-100 dark:hover:bg-surface-dark/80 text-gray-800 dark:text-gray-300 font-semibold rounded-xl text-lg transition-all active:scale-95">
                     Fazer Login
                 </a>
