--- a/client/src/pages/dashboardprovider.html
+++ b/client/src/pages/dashboardprovider.html
@@ -65,6 +65,60 @@
 
 <body
     class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-white font-display antialiased overflow-x-hidden pb-24 selection:bg-primary selection:text-black">
+    <nav class="hidden md:block bg-white dark:bg-surface-dark border-b border-gray-100 dark:border-white/5">
+        <div class="container mx-auto px-6">
+            <div class="flex items-center justify-between h-16">
+                <a href="/index.html" class="flex items-center gap-2">
+                    <div class="bg-primary/10 p-2 rounded-lg">
+                        <span class="material-symbols-outlined text-primary text-xl">local_hospital</span>
+                    </div>
+                    <span class="text-lg font-bold text-text-dark dark:text-white">HealthConnect</span>
+                </a>
+                <div class="flex items-center gap-6">
+                    <a href="/src/pages/search.html" class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">Buscar</a>
+                    <a href="/src/pages/dashboard.html" class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">Dashboard</a>
+                    <a href="/src/pages/profile.html" class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">Perfil</a>
+                </div>
+                <div class="flex items-center gap-3">
+                    <div id="headerAuth" class="flex items-center gap-3">
+                        <a href="/src/pages/login.html" class="px-4 py-2 text-gray-700 dark:text-gray-300 font-medium hover:text-primary dark:hover:text-primary transition-colors">Entrar</a>
+                        <a href="/src/pages/register.html" class="px-4 py-2 bg-primary hover:bg-primary-dark text-background-dark font-semibold rounded-xl transition-all">Cadastrar</a>
+                    </div>
+                    <div id="headerUser" class="hidden items-center gap-3">
+                        <span id="headerUserName" class="text-gray-700 dark:text-gray-300 font-medium"></span>
+                        <button id="headerLogout" class="px-4 py-2 text-red-600 hover:bg-red-50 dark:hover:bg-red-900/20 rounded-xl transition-colors">Sair</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <script>
+        (function(){
+            const token = localStorage.getItem('token');
+            const user = JSON.parse(localStorage.getItem('user')||'{}');
+            const authEl = document.getElementById('headerAuth');
+            const userEl = document.getElementById('headerUser');
+            const nameEl = document.getElementById('headerUserName');
+            if (authEl && userEl) {
+                if (token) {
+                    authEl.classList.add('hidden');
+                    userEl.classList.remove('hidden');
+                    if (nameEl) nameEl.textContent = user?.name || 'Minha Conta';
+                } else {
+                    authEl.classList.remove('hidden');
+                    userEl.classList.add('hidden');
+                }
+            }
+            const logout = document.getElementById('headerLogout');
+            if (logout) {
+                logout.addEventListener('click', () => {
+                    localStorage.removeItem('token');
+                    localStorage.removeItem('user');
+                    window.location.href = '/index.html';
+                });
+            }
+        })();
+    </script>
     <!-- Header Section -->
     <div
         class="flex items-center justify-between p-5 pt-8 sticky top-0 z-20 bg-background-light/95 dark:bg-background-dark/95 backdrop-blur-sm border-b border-transparent dark:border-white/5 transition-all">
@@ -291,6 +345,7 @@
             </div>
         </div>
     </div>
+    <div id="providerAppointments" class="px-5 mt-6 space-y-3"></div>
     <!-- Bottom Navigation -->
     <div
         class="fixed bottom-0 left-0 w-full bg-surface-light/95 dark:bg-surface-dark/95 backdrop-blur-lg border-t border-slate-200 dark:border-white/10 px-6 py-3 pb-6 flex justify-between items-center z-50">
@@ -321,6 +376,36 @@
             <span class="text-[10px] font-medium">Perfil</span>
         </button>
     </div>
+    <script type="module">
+        import { API_URL } from '../../utils/config.js';
+        async function loadProviderAppointments(){
+            const token = localStorage.getItem('token');
+            if (!token) { window.location.href = '/src/pages/login.html'; return; }
+            const res = await fetch(`${API_URL}/api/appointments/my-appointments`, { headers: { 'Authorization': `Bearer ${token}` } });
+            const items = await res.json();
+            const root = document.getElementById('providerAppointments');
+            root.innerHTML = `
+                <h3 class="text-lg font-bold dark:text-white mb-3">Meus Atendimentos</h3>
+                ${items.map(apt => `
+                    <div class="relative overflow-hidden rounded-2xl bg-surface-light dark:bg-surface-dark border border-slate-100 dark:border-white/5 shadow">
+                        <div class="p-4 flex items-center justify-between">
+                            <div>
+                                <p class="text-sm text-slate-500 dark:text-slate-400">${apt.clientId?.name || 'Cliente'}</p>
+                                <h4 class="font-bold dark:text-white">${apt.serviceId?.title || 'Serviço'} • ${new Date(apt.scheduledDate).toLocaleDateString()} ${apt.scheduledTime || ''}</h4>
+                            </div>
+                            <span class="text-xs font-bold px-2 py-1 rounded-full ${badge(apt.status)}">${status(apt.status)}</span>
+                        </div>
+                    </div>
+                `).join('')}
+            `;
+        }
+        function status(s){ return ({pending:'Pendente',confirmed:'Confirmado',in_progress:'Em Andamento',completed:'Concluído',cancelled:'Cancelado'})[s]||s }
+        function badge(s){
+            const map = { pending:'bg-yellow-500/10 text-yellow-500', confirmed:'bg-blue-500/10 text-blue-400', in_progress:'bg-green-500/10 text-green-400', completed:'bg-purple-500/10 text-purple-400', cancelled:'bg-red-500/10 text-red-400' };
+            return map[s] || 'bg-slate-500/10 text-slate-400';
+        }
+        document.addEventListener('DOMContentLoaded', loadProviderAppointments);
+    </script>
 </body>
 
 </html>
