--- a/client/src/pages/details.html
+++ b/client/src/pages/details.html
@@ -53,16 +53,71 @@
 </head>
 
 <body class="bg-background-light dark:bg-background-dark font-display text-slate-900 dark:text-white antialiased">
+   
+    <!-- Navigation Header -->
+    <header class="sticky top-0 z-50 bg-white dark:bg-surface-dark border-b border-gray-100 dark:border-white/5">
+        <div class="container mx-auto px-4 py-3">
+            <div class="flex items-center justify-between">
+                <div class="container mx-auto px-6">
+                    <div class="flex items-center justify-between h-16">
+                        <a href="dashboard.html" class="flex items-center gap-2">
+                            <div class=" p-2 rounded-lg">
+                                <span class="material-symbols-outlined text-primary text-xl">local_hospital</span>
+                            </div>
+                            <span class="text-lg font-bold text-text-dark dark:text-white">HealthConnect</span>
+                        </a>
+                        <div class="flex items-center gap-6">
+                            <a href="/src/pages/search.html"
+                                class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">Buscar</a>
+                            <a href="/src/pages/dashboard.html"
+                                class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">Dashboard</a>
+                           
+                        </div>
+                        <div class="flex items-center gap-3">
+                            <div id="headerAuth" class="flex items-center gap-3">
+                                <a href="/src/pages/login.html"
+                                    class="px-4 py-2 text-gray-700 dark:text-gray-300 font-medium hover:text-primary dark:hover:text-primary transition-colors">Entrar</a>
+                                <a href="/src/pages/register.html"
+                                    class="px-4 py-2 bg-primary hover:bg-primary-dark text-background-dark font-semibold rounded-xl transition-all">Cadastrar</a>
+                            </div>
+                            <div id="headerUser" class="hidden items-center gap-3">
+                                <span id="headerUserName" class="text-gray-700 dark:text-gray-300 font-medium"></span>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- User Menu -->
+                <div class="flex items-center gap-4">
+                    <button
+                        class="relative p-2 text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">
+                        <span class="material-symbols-outlined">notifications</span>
+                        <span class="absolute top-1 right-1 h-2 w-2 bg-red-500 rounded-full"></span>
+                    </button>
+                    <a href="profile.html"
+                        class="p-2 text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">
+                        <span class="material-symbols-outlined">person</span>
+                    </a>
+
+                    <button id="headerLogout"
+                        class="px-4 py-2 text-red-600 hover:bg-red-50 dark:hover:bg-red-900/20 rounded-xl transition-colors">Sair</button>
+                </div>
+            </div>
+        </div>
+    </header>
+   
     <div class="relative flex min-h-screen w-full flex-col overflow-x-hidden pb-24">
         <!-- Top App Bar -->
         <div
-            class="sticky top-0 z-50 flex items-center bg-background-light/95 dark:bg-background-dark/95 backdrop-blur-md p-4 pb-2 justify-between border-b border-slate-200 dark:border-white/10">
+            class="sticky top-0 z-0 flex items-center bg-background-light/95 dark:bg-background-dark/95 backdrop-blur-md p-4 pb-2 justify-between border-b border-slate-200 dark:border-white/10">
             <button
-                class="text-slate-900 dark:text-white flex size-10 shrink-0 items-center justify-center rounded-full hover:bg-black/5 dark:hover:bg-white/10 transition-colors">
-                <span class="material-symbols-outlined">arrow_back</span>
+                class="text-slate-900 dark:text-white flex size-10 shrink-0 items-center justify-center rounded-full hover:bg-black/5 transition-colors">
+                    <a href="search.html" class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">
+                        <span class="material-symbols-outlined">arrow_back</span>
+                    </a>
             </button>
             <h2
-                class="text-slate-900 dark:text-white text-lg font-bold leading-tight tracking-tight flex-1 text-center pr-10">
+                class="text-slate-900 dark:text-white text-lg font-bold leading-tight tracking-tight flex-1 justify-center pr-10">
                 Detalhes</h2>
             <div class="w-10"></div> <!-- Spacer to center title -->
         </div>
@@ -246,6 +301,46 @@
             </div>
         </div>
     </div>
+
+        <script>
+    (function () {
+        const token = localStorage.getItem('token');
+        const user = JSON.parse(localStorage.getItem('user') || '{}');
+
+        const authEl = document.getElementById('headerAuth');
+        const userEl = document.getElementById('headerUser');
+        const nameEl = document.getElementById('headerUserName');
+        const logout = document.getElementById('headerLogout');
+
+        if (authEl && userEl) {
+            if (token) {
+                authEl.classList.add('hidden');
+                userEl.classList.remove('hidden');
+
+                if (nameEl && user?.name) {
+                    const parts = user.name.trim().split(/\s+/);
+                    nameEl.textContent =
+                        parts.length > 1
+                            ? `${parts[0]} ${parts[parts.length - 1]}`
+                            : parts[0];
+                } else if (nameEl) {
+                    nameEl.textContent = 'Minha Conta';
+                }
+            } else {
+                authEl.classList.remove('hidden');
+                userEl.classList.add('hidden');
+            }
+        }
+
+        if (logout) {
+            logout.addEventListener('click', () => {
+                localStorage.removeItem('token');
+                localStorage.removeItem('user');
+                window.location.href = '/index.html';
+            });
+        }
+    })();
+</script>
 </body>
 
 </html>
