--- a/client/src/pages/reviews.html
+++ b/client/src/pages/reviews.html
@@ -59,6 +59,60 @@
 
 <body
     class="bg-background-light dark:bg-background-dark font-display text-gray-900 dark:text-gray-100 min-h-screen flex flex-col overflow-x-hidden pb-safe-bottom">
+    <nav class="hidden md:block bg-white dark:bg-surface-dark border-b border-gray-100 dark:border-white/5">
+        <div class="container mx-auto px-6">
+            <div class="flex items-center justify-between h-16">
+                <a href="/index.html" class="flex items-center gap-2">
+                    <div class="bg-primary/10 p-2 rounded-lg">
+                        <span class="material-symbols-outlined text-primary text-xl">local_hospital</span>
+                    </div>
+                    <span class="text-lg font-bold text-text-dark dark:text-white">HealthConnect</span>
+                </a>
+                <div class="flex items-center gap-6">
+                    <a href="/src/pages/search.html" class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">Buscar</a>
+                    <a href="/src/pages/dashboard.html" class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">Dashboard</a>
+                    <a href="/src/pages/profile.html" class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">Perfil</a>
+                </div>
+                <div class="flex items-center gap-3">
+                    <div id="headerAuth" class="flex items-center gap-3">
+                        <a href="/src/pages/login.html" class="px-4 py-2 text-gray-700 dark:text-gray-300 font-medium hover:text-primary dark:hover:text-primary transition-colors">Entrar</a>
+                        <a href="/src/pages/register.html" class="px-4 py-2 bg-primary hover:bg-primary-dark text-background-dark font-semibold rounded-xl transition-all">Cadastrar</a>
+                    </div>
+                    <div id="headerUser" class="hidden items-center gap-3">
+                        <span id="headerUserName" class="text-gray-700 dark:text-gray-300 font-medium"></span>
+                        <button id="headerLogout" class="px-4 py-2 text-red-600 hover:bg-red-50 dark:hover:bg-red-900/20 rounded-xl transition-colors">Sair</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <script>
+        (function(){
+            const token = localStorage.getItem('token');
+            const user = JSON.parse(localStorage.getItem('user')||'{}');
+            const authEl = document.getElementById('headerAuth');
+            const userEl = document.getElementById('headerUser');
+            const nameEl = document.getElementById('headerUserName');
+            if (authEl && userEl) {
+                if (token) {
+                    authEl.classList.add('hidden');
+                    userEl.classList.remove('hidden');
+                    if (nameEl) nameEl.textContent = user?.name || 'Minha Conta';
+                } else {
+                    authEl.classList.remove('hidden');
+                    userEl.classList.add('hidden');
+                }
+            }
+            const logout = document.getElementById('headerLogout');
+            if (logout) {
+                logout.addEventListener('click', () => {
+                    localStorage.removeItem('token');
+                    localStorage.removeItem('user');
+                    window.location.href = '/index.html';
+                });
+            }
+        })();
+    </script>
     <div class="sticky top-0 z-50 bg-background-dark/95 backdrop-blur-sm border-b border-white/5 pt-safe-top">
         <div class="flex items-center justify-between p-4">
             <button
@@ -200,6 +254,43 @@
         </div>
     </div>
 
+    <script type="module">
+        import { API_URL } from '../../utils/config.js';
+        const params = new URLSearchParams(window.location.search);
+        const providerId = params.get('provider');
+        const appointmentId = params.get('appointment');
+        const ratingInput = document.getElementById('rating');
+        const commentInput = document.getElementById('comment');
+        const submitBtn = document.getElementById('submitReview');
+
+        async function loadProvider() {
+            if (!providerId) return;
+            const res = await fetch(`${API_URL}/api/providers/${providerId}/reviews`);
+            const data = await res.json();
+            // Optionally update header with average rating
+            // Keeps layout intact
+        }
+
+        async function submitReview() {
+            const token = localStorage.getItem('token');
+            if (!token || !appointmentId) return;
+            const payload = { rating: Number(ratingInput?.value || 5), review: commentInput?.value || '' };
+            const res = await fetch(`${API_URL}/api/appointments/${appointmentId}/review`, {
+                method: 'PATCH',
+                headers: { 'Content-Type': 'application/json', 'Authorization': `Bearer ${token}` },
+                body: JSON.stringify(payload)
+            });
+            if (res.ok) {
+                alert('Avaliação enviada!');
+                window.location.href = '/historical.html';
+            } else {
+                alert('Falha ao enviar avaliação');
+            }
+        }
+
+        if (submitBtn) submitBtn.addEventListener('click', submitReview);
+        document.addEventListener('DOMContentLoaded', loadProvider);
+    </script>
 </body>
 
 </html>
