--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HealthConnect - Plataforma de Saúde</title>
+    <title>Muilo - Plataforma de Saúde</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -105,7 +105,7 @@
                     <div class=" p-0 rounded-full">
                         <span class="material-symbols-outlined text-primary text-4xl">local_hospital</span>
                     </div>
-                    <span class="text-xl font-bold tracking-tight text-text-dark dark:text-white">HealthConnect</span>
+                    <span class="text-xl font-bold tracking-tight text-text-dark dark:text-white">Muilo</span>
                 </div>
 
                 <!-- Desktop Navigation -->
@@ -215,11 +215,11 @@
                     <!-- Stats Cards -->
                     <div class="absolute -bottom-6 left-6 right-6 grid grid-cols-3 gap-4">
                         <div class="bg-white dark:bg-surface-dark rounded-xl p-4 shadow-lg">
-                            <div class="text-2xl font-bold text-primary">500+</div>
+                            <div class="text-2xl font-bold text-primary">50+</div>
                             <div class="text-sm text-gray-600 dark:text-gray-300">Profissionais</div>
                         </div>
                         <div class="bg-white dark:bg-surface-dark rounded-xl p-4 shadow-lg">
-                            <div class="text-2xl font-bold text-primary">24h</div>
+                            <div class="text-2xl font-bold text-primary">24/7</div>
                             <div class="text-sm text-gray-600 dark:text-gray-300">Atendimento</div>
                         </div>
                         <div class="bg-white dark:bg-surface-dark rounded-xl p-4 shadow-lg">
@@ -365,7 +365,7 @@
                         <div class="bg-primary/10 p-2 rounded-full">
                             <span class="material-symbols-outlined text-primary text-2xl">local_hospital</span>
                         </div>
-                        <span class="text-xl font-bold">HealthConnect</span>
+                        <span class="text-xl font-bold">Muilo</span>
                     </div>
                     <p class="text-gray-400 text-sm">
                         Conectando cuidados de saúde com confiança e tecnologia.
@@ -406,7 +406,7 @@
             <div class="section-divider my-8"></div>
 
             <div class="flex flex-col md:flex-row justify-between items-center text-gray-400 text-sm">
-                <p>© 2024 HealthConnect. Todos os direitos reservados.</p>
+                <p>© 2024 Muilo. Todos os direitos reservados.</p>
                 <div class="flex gap-4 mt-4 md:mt-0">
                     <!-- WhatsApp -->
                     <button data-platform="whatsapp"
