--- a/client/src/pages/dashboard.html
+++ b/client/src/pages/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard - HealthConnect</title>
+    <title>Dashboard - Muilo</title>
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -124,7 +124,7 @@
                     <div class="bg-primary/10 p-3 rounded-xl">
                         <span class="material-symbols-outlined text-primary text-2xl">local_hospital</span>
                     </div>
-                    <span class="text-xl font-bold text-text-dark dark:text-white">HealthConnect</span>
+                    <span class="text-xl font-bold text-text-dark dark:text-white">Muilo</span>
                 </a>
             </div>
             
@@ -224,7 +224,7 @@
                                 <div class="bg-primary/10 p-3 rounded-xl">
                                     <span class="material-symbols-outlined text-primary text-2xl">local_hospital</span>
                                 </div>
-                                <span class="text-xl font-bold text-text-dark dark:text-white">HealthConnect</span>
+                                <span class="text-xl font-bold text-text-dark dark:text-white">Muilo</span>
                             </a>
                             <button id="closeMobileMenu" class="text-gray-600 dark:text-gray-300">
                                 <span class="material-symbols-outlined text-2xl">close</span>
