--- a/client/src/pages/profile.html
+++ b/client/src/pages/profile.html
@@ -50,7 +50,7 @@
                     <div class="bg-primary/10 p-2 rounded-lg">
                         <span class="material-symbols-outlined text-primary text-xl">local_hospital</span>
                     </div>
-                    <span class="text-lg font-bold text-text-dark dark:text-white">HealthConnect</span>
+                    <span class="text-lg font-bold text-text-dark dark:text-white">Muilo</span>
                 </a>
                 <div class="flex items-center gap-6">
                     <a href="/src/pages/search.html" class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">Buscar</a>
