--- a/client/src/pages/search.html
+++ b/client/src/pages/search.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buscar Serviços - HealthConnect</title>
+    <title>Buscar Serviços - Muilo</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -137,7 +137,7 @@
                             <div class=" p-2 rounded-lg">
                                 <span class="material-symbols-outlined text-primary text-xl">local_hospital</span>
                             </div>
-                            <span class="text-lg font-bold text-text-dark dark:text-white">HealthConnect</span>
+                            <span class="text-lg font-bold text-text-dark dark:text-white">Muilo</span>
                         </a>
                         <div class="flex items-center gap-6">
                             <a href="/src/pages/search.html"
@@ -493,6 +493,7 @@
 
     <!-- JavaScript -->
     <script type="module">
+        if (false) {
         // Mock data for services
         const mockServices = [
             {
@@ -1020,6 +1021,106 @@
         // Make functions globally available
         window.viewService = viewService;
         window.bookService = bookService;
+        }
+    </script>
+    <script type="module">
+        import { API_URL } from '../../utils/config.js';
+        const servicesList = document.getElementById('servicesList');
+        const resultsCount = document.getElementById('resultsCount');
+        const loadingState = document.getElementById('loadingState');
+        const emptyState = document.getElementById('emptyState');
+        const pagination = document.getElementById('pagination');
+        let page = 1;
+        const perPage = 12;
+
+        function tpl(service){
+            const provider = service.providerId || {};
+            const rating = provider.rating ?? 0;
+            const image = 'https://images.unsplash.com/photo-1537368910025-700350fe46c7?w=200&h=200&fit=crop&crop=face';
+            return `
+                <div class="service-card bg-white dark:bg-surface-dark rounded-2xl p-5 border border-gray-100 dark:border-white/5 hover:shadow-xl transition-all animate-fade-in">
+                    <div class="flex items-start gap-4 mb-4">
+                        <div class="relative">
+                            <img src="${image}" alt="${service.title}" class="w-16 h-16 rounded-xl object-cover">
+                        </div>
+                        <div class="flex-1 min-w-0">
+                            <div class="flex items-start justify-between gap-2">
+                                <div>
+                                    <h3 class="font-bold text-text-dark dark:text-white">${service.title}</h3>
+                                    <p class="text-sm text-gray-600 dark:text-gray-300">${provider.name || ''}</p>
+                                </div>
+                                <div class="text-right">
+                                    <div class="flex items-center gap-1 justify-end">
+                                        <span class="material-symbols-outlined text-amber-400 text-sm fill-current">star</span>
+                                        <span class="text-sm font-bold">${Number(rating).toFixed(1)}</span>
+                                    </div>
+                                    <div class="text-sm text-gray-600 dark:text-gray-300">R$ ${Number(service.price||0).toFixed(2)}</div>
+                                </div>
+                            </div>
+                            <p class="mt-2 text-gray-600 dark:text-gray-300 text-sm">${service.description || ''}</p>
+                        </div>
+                    </div>
+                    <div class="flex gap-3">
+                        <button onclick="viewService('${service._id}')" class="flex-1 py-2.5 bg-gray-100 dark:bg:white/5 hover:bg-gray-200 dark:hover:bg-white/10 text-gray-700 dark:text-gray-300 font-medium rounded-lg transition-colors">Ver Detalhes</button>
+                        <button onclick="bookService('${service._id}')" class="flex-1 py-2.5 bg-primary hover:bg-primary-dark text-background-dark font-bold rounded-lg transition-colors shadow-sm shadow-primary/20">Agendar</button>
+                    </div>
+                </div>`;
+        }
+
+        function renderPagination(total){
+            const totalPages = Math.ceil(total / perPage);
+            const btn = (p,label,active=false)=>`<button class="px-3 py-1 rounded-lg ${active? 'bg-primary text-black':'bg-gray-100 dark:bg-white/5 text-gray-700 dark:text-gray-300'}" onclick="changePage(${p})">${label}</button>`;
+            const items = [];
+            for(let i=1;i<=totalPages;i++){ items.push(btn(i,i,i===page)); }
+            pagination.innerHTML = items.join('');
+            window.changePage = (p)=>{ page = p; performSearch(); };
+        }
+
+        async function performSearch(){
+            loadingState.classList.remove('hidden');
+            emptyState.classList.add('hidden');
+            servicesList.innerHTML = '';
+
+            const q = document.getElementById('searchInput')?.value || '';
+            const category = document.getElementById('categoryFilter')?.value || '';
+            const priceRaw = document.getElementById('priceFilter')?.value || '';
+            const minRating = parseFloat(document.getElementById('ratingFilter')?.value || '');
+            const params = new URLSearchParams();
+            if (q) params.set('q', q);
+            if (category) params.set('category', category);
+            if (priceRaw){
+                if (priceRaw.endsWith('+')) params.set('price', priceRaw.replace('+','-'));
+                else params.set('price', priceRaw);
+            }
+            try{
+                const res = await fetch(`${API_URL}/api/services?${params.toString()}`);
+                let items = await res.json();
+                if (!isNaN(minRating)) items = items.filter(s => (s.providerId?.rating||0) >= minRating);
+                resultsCount.textContent = `${items.length} serviços encontrados`;
+                loadingState.classList.add('hidden');
+                if (!items.length){ emptyState.classList.remove('hidden'); pagination.innerHTML=''; return; }
+                const start = (page-1)*perPage; const end = start+perPage;
+                servicesList.innerHTML = items.slice(start,end).map(tpl).join('');
+                renderPagination(items.length);
+            }catch(e){
+                loadingState.classList.add('hidden');
+                resultsCount.textContent = `Erro ao carregar serviços`;
+                emptyState.classList.remove('hidden');
+            }
+        }
+
+        function setup(){
+            document.getElementById('searchInput')?.addEventListener('input', ()=>{ page=1; performSearch(); });
+            document.getElementById('categoryFilter')?.addEventListener('change', ()=>{ page=1; performSearch(); });
+            document.getElementById('priceFilter')?.addEventListener('change', ()=>{ page=1; performSearch(); });
+            document.getElementById('ratingFilter')?.addEventListener('change', ()=>{ page=1; performSearch(); });
+        }
+
+        window.viewService = (id)=>{ window.location.href = `/src/pages/details.html?id=${id}`; };
+        window.bookService = (id)=>{ window.location.href = `/src/pages/appointments.html?service=${id}`; };
+        window.performSearch = performSearch;
+
+        document.addEventListener('DOMContentLoaded', ()=>{ setup(); performSearch(); });
     </script>
 
     <script>
